Commencement page accueil + correctif
Suppression du password pour la table utilisateur

--- a/templates/security/base.html.twig
+++ b/templates/security/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{% block title %}Se connecter | Inventaire{% endblock %}</title>
+        <title>{% block title %}Inventaire{% endblock %}</title>
         <link rel="shortcut icon" type="image/x-icon" href="{{ asset('assets/img/favicons/favicon.jpg') }}">
         <meta name="theme-color" content="#ffffff">
         <script src="{{ asset('assets/js/config.js') }}"></script>
@@ -26,7 +26,6 @@
                     <div class="col-sm-10 col-md-6 px-sm-0 align-self-center mx-auto py-5">
                         <div class="row justify-content-center g-0">
                             <div class="col-lg-9 col-xl-8 col-xxl-6">
-{#                                {% block erreurs %}{% endblock %}#}
                                 <div class="card">
                                     <div class="card-header bg-circle-shape bg-shape text-center p-2">
                                         <span class="font-sans-serif fw-bolder fs-3 z-1 position-relative text-white" data-bs-theme="light">
