Corrections de bugs
Ajout :
doctrine/annotations
sensio/framework-extra-bundle
twig/intl-extra

Autoriser la méthode DELETE :
use Symfony\Component\HttpFoundation\Request;
Request::enableHttpMethodParameterOverride();

--- a/templates/gui/base.html.twig
+++ b/templates/gui/base.html.twig
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Inventaire{% endblock %}</title>
-        <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon.jpg">
+        <link rel="shortcut icon" type="image/x-icon" href="{{ asset('assets/img/favicons/favicon.jpg') }}">
         <meta name="theme-color" content="#ffffff">
         <script src="{{ asset('assets/js/config.js') }}"></script>
         <script src="{{ asset('assets/vendors/simplebar/simplebar.min.js') }}"></script>
