--- a/templates/stockage/edit.html.twig
+++ b/templates/stockage/edit.html.twig
@@ -28,7 +28,7 @@
                 <div class="card mb-3">
                     <div class="card-header d-flex flex-between-center">
                         <h5 class="mb-0">Éditer un type de stockage</h5>
-                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.utilisateur.show') }}">
+                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.stockage.show') }}">
                             Retour
                         </a>
                     </div>
