--- a/templates/pc_portable/add.html.twig
+++ b/templates/pc_portable/add.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Ajouter un PC Portable | Inventaire{% endblock %}
 {% block stylesheets %}
     <link href="{{ asset('assets/vendors/flatpickr/flatpickr.min.css') }}" rel="stylesheet" />
+    <link href="{{ asset('assets/vendors/choices/choices.min.css') }}" rel="stylesheet" />
 {% endblock %}
 
 {% block body %}
@@ -65,4 +66,5 @@
 {% endblock %}
 {% block javascripts %}
     <script src="{{ asset('assets/js/flatpickr.js') }}"></script>
+    <script src="{{ asset('assets/vendors/choices/choices.min.js') }}"></script>
 {% endblock %}
