--- a/templates/tablette/edit.html.twig
+++ b/templates/tablette/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Éditer la tablette | Inventaire{% endblock %}
 {% block stylesheets %}
     <link href="{{ asset('assets/vendors/flatpickr/flatpickr.min.css') }}" rel="stylesheet" />
+    <link href="{{ asset('assets/vendors/choices/choices.min.css') }}" rel="stylesheet" />
 {% endblock %}
 
 {% block body %}
@@ -60,4 +61,5 @@
 {% endblock %}
 {% block javascripts %}
     <script src="{{ asset('assets/js/flatpickr.js') }}"></script>
+    <script src="{{ asset('assets/vendors/choices/choices.min.js') }}"></script>
 {% endblock %}
