--- a/templates/gui/menuGauche.html.twig
+++ b/templates/gui/menuGauche.html.twig
@@ -56,18 +56,11 @@
                             <span class="nav-link-text ps-1">Gestion</span>
                         </div>
                     </a>
-                    <ul class="nav collapse {% if menu_active == 'ecran' or menu_active == 'emplacement' or menu_active == 'serveur' or menu_active == 'etat' or menu_active == 'stockage' or menu_active == 'tablette' or menu_active == 'telephone' or menu_active == 'utilisateur' or menu_active == 'pc_fixe' or menu_active == 'pc_portable' %}show{% endif %}" id="gestion">
+                    <ul class="nav collapse {% if menu_active == 'ecran' or menu_active == 'serveur' or menu_active == 'tablette' or menu_active == 'telephone' or menu_active == 'pc_fixe' or menu_active == 'pc_portable' %}show{% endif %}" id="gestion">
                         <li class="nav-item">
                             <a class="nav-link {% if menu_active == 'ecran' %}active{% endif %}" href="{{ path('admin.ecran.show') }}">
                                 <div class="d-flex align-items-center">
                                     <span class="nav-link-text ps-1">Écrans</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link {% if menu_active == 'emplacement' %}active{% endif %}" href="{{ path('admin.emplacement.show') }}">
-                                <div class="d-flex align-items-center">
-                                    <span class="nav-link-text ps-1">Emplacements</span>
                                 </div>
                             </a>
                         </li>
@@ -102,20 +95,6 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if menu_active == 'etat' %}active{% endif %}" href="{{ path('admin.etat.show') }}">
-                                <div class="d-flex align-items-center">
-                                    <span class="nav-link-text ps-1">États</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link {% if menu_active == 'stockage' %}active{% endif %}" href="{{ path('admin.stockage.show') }}">
-                                <div class="d-flex align-items-center">
-                                    <span class="nav-link-text ps-1">Stockages</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link {% if menu_active == 'tablette' %}active{% endif %}" href="{{ path('admin.tablette.show') }}">
                                 <div class="d-flex align-items-center">
                                     <span class="nav-link-text ps-1">Tablettes</span>
@@ -123,9 +102,79 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if menu_active == 'telephone' %}active{% endif %}" href="{{ path('admin.telephone.show') }}">
+                            <a class="nav-link dropdown-indicator collapsed" href="#telephones" data-bs-toggle="collapse" aria-expanded="false" aria-controls="multi-level">
                                 <div class="d-flex align-items-center">
                                     <span class="nav-link-text ps-1">Téléphones</span>
+                                </div>
+                            </a>
+                            <ul class="nav collapse {% if menu_active == 'telephone_fixe' or menu_active == 'telephone_portable' %}show{% endif %}" id="telephones">
+                                <li class="nav-item">
+                                    <a class="nav-link {% if menu_active == 'telephone_fixe' %}active{% endif %}" href="{{ path('admin.telephone_portable.show') }}">
+                                        <div class="d-flex align-items-center">
+                                            <span class="nav-link-text ps-1">Fixes</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link {% if menu_active == 'telephone_portable' %}active{% endif %}" href="{{ path('admin.telephone_portable.show') }}">
+                                        <div class="d-flex align-items-center">
+                                            <span class="nav-link-text ps-1">Portables</span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link dropdown-indicator" href="#parametres" role="button" data-bs-toggle="collapse" aria-expanded="false" aria-controls="parametres">
+                        <div class="d-flex align-items-center">
+                            <span class="nav-link-icon">
+                                <span class="bi bi-gear-fill"></span>
+                            </span>
+                            <span class="nav-link-text ps-1">Paramètres</span>
+                        </div>
+                    </a>
+                    <ul class="nav collapse {% if menu_active == 'entreprise' or menu_active == 'emplacement' or menu_active == 'etat' or menu_active == 'fournisseur' or menu_active == 'os' or menu_active == 'stockage' or menu_active == 'utilisateur' %}show{% endif %}" id="parametres">
+                        <li class="nav-item">
+                            <a class="nav-link {% if menu_active == 'entreprise' %}active{% endif %}" href="{{ path('admin.emplacement.show') }}">
+                                <div class="d-flex align-items-center">
+                                    <span class="nav-link-text ps-1">Sites</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if menu_active == 'emplacement' %}active{% endif %}" href="{{ path('admin.emplacement.show') }}">
+                                <div class="d-flex align-items-center">
+                                    <span class="nav-link-text ps-1">Emplacements</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if menu_active == 'etat' %}active{% endif %}" href="{{ path('admin.etat.show') }}">
+                                <div class="d-flex align-items-center">
+                                    <span class="nav-link-text ps-1">États</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if menu_active == 'fournisseur' %}active{% endif %}" href="{{ path('admin.etat.show') }}">
+                                <div class="d-flex align-items-center">
+                                    <span class="nav-link-text ps-1">Fournisseurs</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if menu_active == 'os' %}active{% endif %}" href="{{ path('admin.etat.show') }}">
+                                <div class="d-flex align-items-center">
+                                    <span class="nav-link-text ps-1">Systèmes d'exploitation</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if menu_active == 'stockage' %}active{% endif %}" href="{{ path('admin.stockage.show') }}">
+                                <div class="d-flex align-items-center">
+                                    <span class="nav-link-text ps-1">Types de stockage</span>
                                 </div>
                             </a>
                         </li>
