--- a/templates/serveur/edit.html.twig
+++ b/templates/serveur/edit.html.twig
@@ -1,6 +1,10 @@
 {% extends 'gui/base.html.twig' %}
 
 {% block title %}Éditer le serveur | Inventaire{% endblock %}
+{% block stylesheets %}
+    <link href="{{ asset('assets/vendors/flatpickr/flatpickr.min.css') }}" rel="stylesheet" />
+    <link href="{{ asset('assets/vendors/choices/choices.min.css') }}" rel="stylesheet" />
+{% endblock %}
 
 {% block body %}
     <div class="d-flex mb-4 mt-3">
@@ -43,7 +47,7 @@
                         {{ form_row(serveurForm.stockage_nombre) }}
                         {{ form_row(serveurForm.stockage, {'placeholder': 'Choisir un type de stockage'}) }}
                         {{ form_row(serveurForm.os) }}
-                        {{ form_row(serveurForm.physique) }}
+                        {{ form_row(serveurForm.physique, {'placeholder': 'Choisir un type'}) }}
                         {{ form_row(serveurForm.numero_serie) }}
                         {{ form_row(serveurForm.emplacement, {'placeholder': 'Choisir un emplacement'}) }}
                         {{ form_row(serveurForm.etat, {'placeholder': 'Choisir un état'}) }}
@@ -59,4 +63,8 @@
             </div>
         </div>
     </div>
+{% endblock %}
+{% block javascripts %}
+    <script src="{{ asset('assets/js/flatpickr.js') }}"></script>
+    <script src="{{ asset('assets/vendors/choices/choices.min.js') }}"></script>
 {% endblock %}
