--- a/templates/telephone_portable/add.html.twig
+++ b/templates/telephone_portable/add.html.twig
@@ -1,6 +1,10 @@
 {% extends 'gui/base.html.twig' %}
 
-{% block title %}Éditer le téléphone | Inventaire{% endblock %}
+{% block title %}Ajouter un téléphone | Inventaire{% endblock %}
+{% block stylesheets %}
+    <link href="{{ asset('assets/vendors/flatpickr/flatpickr.min.css') }}" rel="stylesheet" />
+    <link href="{{ asset('assets/vendors/choices/choices.min.css') }}" rel="stylesheet" />
+{% endblock %}
 
 {% block body %}
     <div class="d-flex mb-4 mt-3">
@@ -13,7 +17,7 @@
                 <span class="bg-200 dark__bg-1100 pe-3">Téléphones</span>
                 <span class="border position-absolute top-50 translate-middle-y w-100 start-0 z-n1"></span>
             </h5>
-            <p class="mb-0">Cette page vous permet d'éditer un téléphone.</p>
+            <p class="mb-0">Cette page vous permet d'ajouter un téléphone.</p>
         </div>
     </div>
     <div class="row g-0">
@@ -27,31 +31,35 @@
             <div class="sticky-sidebar">
                 <div class="card mb-3">
                     <div class="card-header d-flex flex-between-center">
-                        <h5 class="mb-0">Éditer un téléphone</h5>
+                        <h5 class="mb-0">Ajouter un téléphone</h5>
                         <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.telephone.show') }}">
                             Retour
                         </a>
                     </div>
                     <div class="card-body bg-light">
                         {{ form_start(telephoneForm) }}
-                        {{ form_row(telephoneForm.nom) }}
-                        {{ form_row(telephoneForm.marque) }}
-                        {{ form_row(telephoneForm.modele) }}
-                        {{ form_row(telephoneForm.utilisateur, {'placeholder': 'Choisir un utilisateur'}) }}
-                        {{ form_row(telephoneForm.imei1) }}
-                        {{ form_row(telephoneForm.imei2) }}
-                        {{ form_row(telephoneForm.numero_serie) }}
-                        {{ form_row(telephoneForm.etat, {'placeholder': 'Choisir un état'}) }}
-                        {{ form_row(telephoneForm.date_achat) }}
-                        {{ form_row(telephoneForm.date_garantie) }}
-                        {{ form_row(telephoneForm.commentaire) }}
-                        <div class="d-flex justify-content-end">
-                            <button class="btn btn-primary me-1 mb-1" type="submit">Éditer</button>
-                        </div>
+                            {{ form_row(telephoneForm.nom) }}
+                            {{ form_row(telephoneForm.marque) }}
+                            {{ form_row(telephoneForm.modele) }}
+                            {{ form_row(telephoneForm.utilisateur, {'placeholder': 'Choisir un utilisateur'}) }}
+                            {{ form_row(telephoneForm.imei1) }}
+                            {{ form_row(telephoneForm.imei2) }}
+                            {{ form_row(telephoneForm.numero_serie) }}
+                            {{ form_row(telephoneForm.etat, {'placeholder': 'Choisir un état'}) }}
+                            {{ form_row(telephoneForm.date_achat) }}
+                            {{ form_row(telephoneForm.date_garantie) }}
+                            {{ form_row(telephoneForm.commentaire) }}
+                            <div class="d-flex justify-content-end">
+                                <button class="btn btn-primary me-1 mb-1" type="submit">Créer</button>
+                            </div>
                         {{ form_end(telephoneForm) }}
                     </div>
                 </div>
             </div>
         </div>
     </div>
+{% endblock %}
+{% block javascripts %}
+    <script src="{{ asset('assets/js/flatpickr.js') }}"></script>
+    <script src="{{ asset('assets/vendors/choices/choices.min.js') }}"></script>
 {% endblock %}
